WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117309
Fix formatting in BasicShapes.cpp
https://bugs.webkit.org/show_bug.cgi?id=117309
Summary
Fix formatting in BasicShapes.cpp
Bem Jones-Bey
Reported
2013-06-06 10:44:18 PDT
Fix formatting in BasicShapes.cpp
Attachments
Patch
(3.53 KB, patch)
2013-06-06 10:47 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2013-06-06 10:47:14 PDT
Created
attachment 203950
[details]
Patch Fix horrible, unreadable formatting mistake.
Alexandru Chiculita
Comment 2
2013-06-06 13:20:23 PDT
Comment on
attachment 203950
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-06-06 13:40:49 PDT
Comment on
attachment 203950
[details]
Patch Clearing flags on attachment: 203950 Committed
r151286
: <
http://trac.webkit.org/changeset/151286
>
WebKit Commit Bot
Comment 4
2013-06-06 13:40:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug