Fix formatting in BasicShapes.cpp https://bugs.webkit.org/show_bug.cgi?id=117309

Patch by Bem Jones-Bey <bjonesbe@adobe.com> on 2013-06-06
Reviewed by Alexandru Chiculita.

I reformatted the code in BasicShapes.cpp (bug 116734) to fix the
style issues, and I got some of the formatting wrong, which makes the
code much harder to read. This patch fixes that formatting.

No new tests, formatting clean up.

* rendering/style/BasicShapes.cpp:
(WebCore::BasicShapeRectangle::path): Fix formatting.
(WebCore::BasicShapeInsetRectangle::path): Fix formatting.

Canonical link: https://commits.webkit.org/135558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151286 268f45cc-cd09-0410-ab3c-d52691b4dbfc